feat(recommend): harden cache concurrency and overload protection